syntax = "proto3";

package infrabin.v1;

import "google/protobuf/duration.proto";

option go_package = "github.com/maruina/go-infrabin/gen/infrabin/v1;infrabinv1";

message HeadersRequest {}

message HeadersResponse {
  map<string, string> headers = 1;
}

message EnvRequest {
  string key = 1;
}

message EnvResponse {
  map<string, string> environment = 1;
}

message RootRequest {}

message RootResponse {
  string hostname = 1;
}

message DelayRequest {
  google.protobuf.Duration duration = 1;
}

message DelayResponse {}

message ProxyRequest {
  string url = 1;
  string method = 2;
  map<string, string> headers = 3;
}

message ProxyResponse {
  int32 status_code = 1;
  map<string, string> headers = 2;
}

service InfrabinService {
  rpc Headers(HeadersRequest) returns (HeadersResponse) {}
  rpc Env(EnvRequest) returns (EnvResponse) {}
  rpc Root(RootRequest) returns (RootResponse) {}
  rpc Delay(DelayRequest) returns (DelayResponse) {}
  rpc Proxy(ProxyRequest) returns (ProxyResponse) {}
}
